# arrow2-benches

./: Cargo.toml  README.md  benches.py  summarize.py
benches/: avro_read.rs  sum.rs
