[package]
name = "arrow2-benches"
version = "0.1.0"
edition = "2018"

[dependencies]
ahash = "*"
#arrow2 = {version = "0.13", features = ["io_avro", "compute_hash", "compute_aggregate"] }
arrow2 = {git = "https://github.com/jorgecarleitao/arrow2", branch = "main", features = ["io_avro", "compute_hash", "compute_aggregate"] }
mz-avro = "0.6"
avro-rs = { version = "0.13", default_features = false }

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "sum"
harness = false

[[bench]]
name = "avro_read"
harness = false
